<resources>
    <string name="app_name">BEŞİKTAŞ</string>
    <string name="name">Ad</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="address">Adres</string>
    <string name="search">Ara</string>
    <string name="vehicle_list">Araçlar</string>
    <string name="action_settings">Ayarlar</string>
    <string name="login_description">Beşiktaş Tersanesi Yönetim Sistemi</string>
    <string name="section">Bölüm</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="communication_data_internal_line">Dahili Tel No</string>
    <string name="status">Durum</string>
    <string name="email">E-Posta</string>
    <string name="repair">Gemi Onarım</string>
    <string name="actual_start_date">Gerçekleşen Başlangıç Tarihi</string>
    <string name="actual_finish_date">Gerçekleşen Bitiş Tarihi</string>
    <string name="login">Giriş</string>
    <string name="duty">Görev</string>
    <string name="communication_data_personal">İletişim Bilgileri - Kişisel</string>
    <string name="employment_date">İşe Giriş Tarihi</string>
    <string name="hr">Insan Kaynakları</string>
    <string name="leave_data">Izin Bilgileri</string>
    <string name="blood_group_name">Kan Grubu</string>
    <string name="communication_data_short_code">Kısa Kod</string>
    <string name="personal_data">Kişisel Bilgiler</string>
    <string name="my_profile">Kişisel Bilgilerim</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="material_price_tl">Malzeme Fiyatı - TL</string>
    <string name="mazeret_izni">Mazeret İzni</string>
    <string name="last_graduated_school_date">Mezun Olduğu Okul / Yılı</string>
    <string name="navigation_drawer_open">Menu Ac</string>
    <string name="navigation_drawer_close">Menu Kapa</string>
    <string name="where">Nerede</string>
    <string name="user_list">Personel Listesi</string>
    <string name="projects">Projeler</string>
    <string name="project_code">Proje Kodu</string>
    <string name="project_eng">Proje Müh.</string>
    <string name="project_desc">Proje Adı</string>
    <string name="reports">Raporlar</string>
    <string name="last_exit">Son Çıkış</string>
    <string name="last_enter">Son Giriş</string>
    <string name="surname">Soyad</string>
    <string name="password">Şifre</string>
    <string name="communication_data_company_line">Şirket Hattı</string>
    <string name="estimated_start_date">Tahmini Baslangic Tarihi</string>
    <string name="estimated_finish_date">Tahmini Bitiş Tarihi</string>
    <string name="work_order_count_fiinshed">Tamamlanan İş Emri Sayısı</string>
    <string name="phone">Tel</string>
    <string name="shipyard_start_date">Tersaneye Geliş Tarihi</string>
    <string name="shipyard_finish_date">Tersaneden Gidiş Tarihi</string>
    <string name="test_fragment">Test Fragment</string>
    <string name="work_order_count_total">Toplam İş Emri Sayısı</string>
    <string name="prod_coo">Ürt Koor.</string>
    <string name="contractor">Yuklenici</string>
    <string name="leave_right">Yıllık İzin</string>
    <string name="contractor_worker_list">Yuklenici Personelleri</string>
    <string name="e_general_000">Sistemde Çalışma Var. En kısa sürede tekrar devreye girecek.</string>
    <string name="e_general_001">Oturum Kayboldu.  Tekrar giriş yapmanız gerekmektedir.</string>
    <string name="e_general_002">Uzun müddet işlem yapmadığınız için oturum sonlandı.  Tekrar giriş yapmanız gerekmektedir.</string>
    <string name="e_general_003">Bu kullanıcı başka bir bilgisayarda oturum açmıştır.  Lütfen önce o oturumu kapatın.</string>
    <string name="e_general_004">Bu sayfaya giriş yetkiniz bulunmamaktadır.</string>
    <string name="e_general_005">Yazılımın ürün anahtarı geçersizdir.  Lütfen firma ile irtibata geçin.</string>
    <string name="e_general_006">Yazılımın yeni bir versiyonu mevcuttur.  Lütfen güncelleme yapın.</string>
    <string name="e_general_007">Veritabanı bağlantısı koptu.  Lütfen tekrar giriş yapın.</string>
    <string name="e_general_011">Bu işlemi yapmak için yetkiniz yok.</string>
    <string name="e_general_012">Id bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_general_013">Programdan çıkmak üzeresiniz.  Kaydetmediğiniz işlemler kaybolabilir.</string>
    <string name="e_general_014">Dikkat kaydetmediğiniz işlemler kaybolabilir. Devam etmek istiyor musunuz?</string>
    <string name="e_general_049">Bu işlemi sadece ilk kaydeden kişi yapabilir.</string>
    <string name="e_general_050">Lütfen işlem yapmadan önce formu kaydedin.</string>
    <string name="e_general_051">Lütfen geçerli bir e-mail adresi giriniz.</string>
    <string name="e_general_052">Lütfen bir alan seçin.</string>
    <string name="e_general_053">Aradığınız değerlerde sonuç bulunamadı. Lütfen arama kriterlerinizi genişletin.</string>
    <string name="e_general_054">Geçersiz şablon</string>
    <string name="e_general_055">Kayıt bulunmamaktadır.Lütfen kayıt ekleyiniz.</string>
    <string name="e_general_056">Kullanıcı adı veya şifre hatalı.</string>
    <string name="e_general_057">Kullanıcı kaydı bulunmamaktadır.</string>
    <string name="e_general_058">Kullanıcı adı ve şifre belirtilen değerlerde değil.</string>
    <string name="e_general_059">Oturum bulunamadı. Lütfen oturum açın.</string>
    <string name="e_general_060">Oturum bulunamadığı için kapatılamadı.</string>
    <string name="e_general_061">Eksik veri geldi, lütfen tekrar deneyin.</string>
    <string name="e_general_062">Bütün alanlar zorunludur. Lütfen bütün alanları doldurun.</string>
    <string name="e_general_098">Aradığınız sayfa bulunmamaktadır.</string>
    <string name="e_general_099">Bu işlemi yapma yetkiniz yok.</string>
    <string name="e_general_100">Başarıyla kaydedildi.</string>
    <string name="e_0000_001">Lütfen kullanıcı adınızı giriniz.</string>
    <string name="e_0000_002">Lütfen şifrenizi giriniz.</string>
    <string name="e_0000_003">Kullanıcı adı veya şifre hatalı.</string>
    <string name="e_160_003">Araç ID bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_160_004">Araç kayıt numarası bulunmamaktadır.</string>
    <string name="e_1000_001">Firma ismi en az 3 karakterden oluşmalıdır.</string>
    <string name="e_1000_002">Firma ismi zorunlu alandır.</string>
    <string name="e_1000_003">Firma No bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_1000_004">Kontakt ismi en az 3 karakterden oluşmalıdır.</string>
    <string name="e_1000_005">Kontakt ismi zorunlu alandır.</string>
    <string name="e_1000_006">Firma Kontakt No bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_1001_007">Arama kriterleini boş gönderemezsiniz. Lütfen en az bir arama kriteri girerek deneyiniz.</string>
    <string name="e_1100_001">Ana İş Grubu zorunlu alandır.</string>
    <string name="e_1100_002">İş No zorunlu alandır.</string>
    <string name="e_1100_003">İngilizce İş Tanımı en az 3 karakterden oluşmalıdır</string>
    <string name="e_1100_004">İngilizce İş Tanımı zorunlu alandır.</string>
    <string name="e_1100_005">İş Tanımı No bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_1200_001">Şablon adı boş olamaz.</string>
    <string name="e_1300_001">Firma ismi en az 3 karakterden oluşmalıdır</string>
    <string name="e_1300_002">Firma ismi zorunlu alandır.</string>
    <string name="e_1300_003">Firma No bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_1300_004">Kontakt ismi en az 3 karakterden oluşmalıdır</string>
    <string name="e_1300_005">Kontakt ismi zorunlu alandır.</string>
    <string name="e_1300_006">Firma Kontakt No bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_1400_002">Gemi Tipi zorunlu alandır.</string>
    <string name="e_1400_001">Gemi No bulunamadı. Lütfen tekrar deneyin.</string>
    <string name="e_1400_003">Gemi İsmi en az 3 karakterden oluşmalıdır</string>
    <string name="e_1400_004">Gemi İsmi zorunlu alandır.</string>
    <string name="e_1400_005">Gemi Bayrağı zorunlu alandır.</string>
    <string name="e_1400_006">Lütfen zorunlu alanları doldurunuz.</string>
    <string name="e_1400_007">Farkli Referans No giriniz.</string>
    <string name="e_1400_008">Bu Gemi Zaten Teklif Sürecinde.</string>
    <string name="e_1400_009">Geminin Teklifi Bulunamadı.</string>
    <string name="e_1500_001">Referans No zorunlu alandır.</string>
    <string name="e_1500_002">Geçersiz bir teklif üzerinde işlem yapıyorsunuz.</string>
    <string name="e_1500_003">Şablon adı boş olamaz.</string>
    <string name="e_1500_004">Geçersiz Teklif Adı.</string>
    <string name="e_1500_005">Gemi Seçmek Zorunlu.</string>
    <string name="e_1500_006">Aradığınız gemi numarası bulunmamaktadır. Lütfen tekrar deneyiniz.</string>
    <string name="e_1500_016">Not alanı veya geçersiz bir iş seçtiniz.</string>
    <string name="e_1500_017">Excel yükleme işlemine devam ederseniz önceki kayıtlar silinecektir. \nDevam etmek ister misiniz?</string>
    <string name="e_1500_018">Bazı satırlar eklenemedi.\nEklenemeyen satırlar :\n{0}</string>
    <string name="e_1600_001">Başlık alanı 3 karakterden kısa olamaz.</string>
    <string name="e_1600_002">Başlık alanı zorunlu alandır.</string>
    <string name="e_1600_003">Lütfen bir kayıt seçiniz.</string>
    <string name="e_18500_001">Master tabloda görünsün işaretliyse,döküman tipini seçmelisiniz. </string>
    <string name="e_0200_001">Yüklenen dosya büyüklüğü maximum değeri aştı.Lütfen dosya boyutunu küçültün.</string>
    <string name="e_0200_002">Yüklenen dosya büyüklüğü maximum degeri aştı.Lütfen dosya boyutunu küçültün.</string>
    <string name="e_0200_003">Dosya tam olarak yüklenemedi.Lütfen tekrar deneyin. </string>
    <string name="e_0200_004">Dosya sunucuya ulaşamadı.Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="e_0200_005">Yüklenen dosya büyüklüğünü düşürüp tekrar deneyin.</string>
    <string name="e_0200_006">Seçtiğiniz dosya türünü yükleme izni bulunmamaktadır.</string>
    <string name="e_0200_007">Dosya yüklenmesi başarısız oldu.</string>
    <string name="e_0200_008">Böyle bir dosya bulunmamaktadır.</string>
    <string name="e_0200_009">Dosya yükleme herhangi bir sayfayla bağdaştırılamadı.Geçersiz dosya yükleme.</string>
    <string name="e_0200_010">Bir dosya isterken Id alanı boş olamaz.</string>
    <string name="e_0200_011">Resim belirtilen klasörde bulunamadi.</string>
    <string name="e_0200_012">Dosya belirtilen klasörden silinemedi.</string>
    <string name="e_0200_013">Aradıgınız kayıt bulunamadı.</string>
    <string name="e_0600_001">Undefined Error</string>
    <string name="e_2000_001">Malzeme ismi en az 3 karakterden oluşmalıdır.</string>
    <string name="e_2000_002">Malzeme ismi zorunlu alandır.</string>
    <string name="e_2000_003">Bir alan seçip tekrar deneyiniz.</string>
    <string name="e_2000_004">Grup alanı boş. Lütfen tekrar deneyin.</string>
    <string name="e_2000_005">Malzeme kodu boş olamaz.</string>
    <string name="e_2000_006">Satın Alma Birimi, Adet ve Birim alanları boş olamaz. </string>
    <string name="e_2000_007">Bu malzeme kodu ile bir ürün daha önce kaydedilmiş.</string>
    <string name="e_2000_008">Bu malzeme hareket görmüştür. Hareket gören malzemeleri silemezsiniz.</string>
    <string name="e_2000_009">Bu malzeme hareket görmüştür. Hareket gören malzemelerde birimleri değiştiremezsiniz.</string>
    <string name="e_2000_010">Bilgileri girerek tekrar deneyiniz.</string>
    <string name="e_2000_011">Malzeme kodu 13 karakter olmalıdır.</string>
    <string name="e_2000_012">Malzeme kodu Grup kodundan farklı olamaz.</string>
    <string name="e_2100_001">İsmi en az 3 karakterden oluşmalıdır.</string>
    <string name="e_2100_002">İsmi zorunlu alandır.</string>
    <string name="e_2100_003">Bir alan seçip tekrar deneyiniz.</string>
    <string name="e_2100_004">Ana grubu seçiniz.</string>
    <string name="e_2100_005">Grup kodu boş olamaz.</string>
</resources>